不再需要添加启动参数 vm: --add-opens java.base/java.lang=ALL-UNNAMED