@@ -1,3 +1,1 @@
 # simple-rpc-demo
-
-## 启动时需要添加启动参数vm: --add-opens java.base/java.lang=ALL-UNNAMED
